docs(Menu, OperacionesCRUD): corregir comentarios para mayor claridad en métodos